@@ -33,7 +33,7 @@
 
                 <entry key="SO" value="https://github.com/The-Sequence-Ontology/SO-Ontologies/raw/master/Ontology_Files/so-simple.obo"/>
 
-                <entry key="CL" value="https://github.com/obophenotype/cell-ontology/releases/download/2023-07-20/cl-basic.obo"/>
+                <entry key="CL" value="https://github.com/obophenotype/cell-ontology/releases/download/v2023-07-20/cl-basic.obo"/>
 
                 <entry key="MA" value="http://www.informatics.jax.org/downloads/reports/adult_mouse_anatomy.obo"/>
                 <!--<entry key="RDO" value="http://ctdbase.org/reports/CTD_diseases.obo.gz"/>-->
@@ -149,6 +149,8 @@
                 <entry key="homologous_in" value="homologous_in" />
                 <entry key="sexually_homologous_to" value="sexual_homolog_to" />
                 <entry key="has_relational_adjective" value="relational_adjective" />
+
+                <!-- ignored properties -->
                 <entry key="vertebra_number" value="xxx_number" />
                 <entry key="tooth_number" value="xxx_number" />
                 <entry key="somite_number" value="xxx_number" />
@@ -158,6 +160,8 @@
                 <entry key="rhombomere_number" value="xxx_number" />
                 <entry key="pharyngeal_arch_number" value="xxx_number" />
                 <entry key="foaf-depicted_by" value="xxx_number" />
+                <entry key="term_tracker_item" value="xxx_number" />
+
                 <entry key="seeAlso" value="see_also" />
                 <entry key="implements_design_pattern" value="design_pattern" />
                 <entry key="axiom_lost_from_external_ontology" value="axiom_lost" />
